--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@ant-design/charts": "^1.2.14",
     "@ant-design/icons": "^4.6.2",
+    "@ant-design/pro-card": "^1.14.22",
     "@ant-design/pro-layout": "^6.5.0",
     "@ant-design/pro-list": "^1.14.5",
     "@ant-design/pro-table": "^2.54.4",
@@ -41,6 +42,7 @@
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "moment": "^2.29.1",
+    "rc-resize-observer": "^1.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "umi": "^3.4.14",
     "viser-react": "^2.4.8"
